improve autoclosing pairs, add auto indentation rules

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,7 +1,7 @@
 {
   "comments": {
     "lineComment": "--",
-    "blockComment": [ "--[[", "]]" ]
+    "blockComment": ["--[[", "]]"]
   },
   "brackets": [
     ["{", "}"],
@@ -12,8 +12,8 @@
     ["{", "}"],
     ["[", "]"],
     ["(", ")"],
-    ["\"", "\""],
-    ["'", "'"]
+    { "open": "\"", "close": "\"", "notIn": ["string"] },
+    { "open": "'", "close": "'", "notIn": ["string"] }
   ],
   "surroundingPairs": [
     ["{", "}"],
@@ -21,5 +21,9 @@
     ["(", ")"],
     ["\"", "\""],
     ["'", "'"]
-  ]
+  ],
+  "indentationRules": {
+    "increaseIndentPattern": "^((?!(\\-\\-)).)*[{(\\[]\\s*$",
+    "decreaseIndentPattern": "^\\s*[})\\]]"
+  }
 }
