--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "color": "#C80000",
     "theme": "dark"
   },
+  "bugs": {
+    "url": "https://github.com/erde-lang/vscode-erde/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/erde-lang/vscode-erde"
+  },
   "engines": {
     "vscode": "^1.63.0"
   },
