--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vscode-erde",
+  "publisher": "erde-lang",
   "version": "0.0.1",
   "license": "MIT",
   "displayName": "Erde",
@@ -17,7 +18,7 @@
     "url": "https://github.com/erde-lang/vscode-erde"
   },
   "engines": {
-    "vscode": "^1.63.0"
+    "vscode": "^1.62.0"
   },
   "categories": [
     "Programming Languages"
